[package]
name = "discord-markov"
version = "0.1.0"
authors = ["Ridan Vandenbergh <ridanvandenbergh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
csv = "1.1.3"
markov = "1.1.0"
